# NoDrama

./: .gitignore  .gitlab-ci.yml  Doxyfile  LICENSE  README.md
NoDrama/: CMakeLists.txt  FrigoModel.qml  GuestList.qml  MainPage.md  NoDrama.sql  PartiesList.qml  User.cpp  User.h  UsersList.qml  addGuest.qml  android.lnk  createAccount.qml  createParty.qml  createaccount.cpp  createaccount.h  createparty.cpp  createparty.h  database.cpp  database.h  deploy-qt-windows.cmake  friendsPage.qml  infoPage.qml  infopage.cpp  infopage.h  main.cpp  main.qml  party.cpp  party.h  resources.qrc  tests.cpp  viewParties.qml  viewParty.qml
NoDrama/images/: res.rc
